# PyFoldingAtHomeControl

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: settings.yml
.github/workflows/: ci.yml  pythonpackage.yml  pythonpublish.yml
FoldingAtHomeControl/: __init__.py  const.py  exceptions.py  foldingathomecontrol.py  pyonparser.py  serialconnection.py
docs/: known_commands.md
fixtures/: options_response.json  slots_response.json  units_response.json
tests/: conftest.py  test_foldingathomecontrol.py  test_serialconnection.py
